<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/id_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:navigationContentDescription="@string/user_card"
        app:navigationIcon="@mipmap/ic_tb_back"
        app:title="@string/qr_code"
        app:titleTextColor="@android:color/white" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:gravity="center"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/id_name_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp" />

    </HorizontalScrollView>

    <ImageView
        android:id="@+id/id_contact_qr_code"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/qr_code"
        android:padding="10dp"
        android:scaleType="fitCenter" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lineSpacingExtra="10dp"
        android:padding="50dp"
        android:text="@string/scan_detail"
        android:textColor="@color/gray_dark"
        android:textSize="12sp" />

</LinearLayout>